# raw

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists.txt.orig  COHERENCE_MEMBRANE.md  DEVELOPER_GUIDE.md  DOCTRINE.md  HANDOFF.md  IMPROVEMENT_PLAN.md  LICENSE  LICENSE.md  LINEAGE.md  PHASE2_PERFORMANCE_TARGETS.md  PHASE2_VALIDATION.md  PLAYGROUND_RENDERING_ARCHITECTURE.md  RAW_Technical_Handoff.docx  README.md  RENDERING_PIPELINE_REFERENCE.md  ROADMAP.md  STATUS.md  TODO.md  _DO_NOT_DISTRIBUTE_PROPRIETARY.md  build.bat  build_handoff_doc.py  deploy.bat  deploy.sh  vcpkg.json
Example/: enbadaptation.fx  enbbloom.fx  enbdepthoffield.fx  enbeffect.fx  enbeffectpostpass.fx  enbeffectprepass.fx  enblens.fx  enbsunsprite.fx  enbunderwater.fx
Example/Addons/: DOF_Advanced.fxh  Effect_AASuite.fxh  Effect_AtmosphericFog.fxh  Effect_BlurSuite.fxh  Effect_CRTShader.fxh  Effect_CinematicFX.fxh  Effect_ColorGrading.fxh  Effect_ProceduralLensDirt.fxh  Effect_ProceduralWeatherFX.fxh  Effect_Sharpening.fxh  Lens_SpectralEffects.fxh  PrePass_Incandescence.fxh  PrePass_ParticleField.fxh  PrePass_PhotoStudio.fxh  PrePass_SSR.fxh  PrePass_SkinSSS.fxh  PrePass_SnowCover.fxh  PrePass_StylizationSuite.fxh  Sunsprite_AtmosphericOptics.fxh  Underwater_SurfaceFX.fxh  Underwater_VolumetricFX.fxh
Example/UI/: enbUI_Bloom.fxh  (+6 more)
FIX IMPLEMENTATIONS/: SB_ENBDiagnostics.h  SB_ShaderDebug.cpp  SB_ShaderDebug.h  SB_ShaderDebug_Integration.md  SkyrimBridge.fxh  SkyrimBridge_v2_Integration_Guide.md  SkyrimBridge_v2_Patches.md  enbUI_Primer.fxh  enbUI_SkyrimBridge.fxh
Inspiration and Techniques/: FransBouma_Technique_Analysis.md  ShaderTechniques_MasterReference.md  SkyrimBridge_Improvement_Blueprint.md  SkyrimBridge_Technique_Implementation_Guide.md  compass_artifact_wf-4f85e4db-2916-4e90-a13d-020538f72781_text_markdown.md  enbParmLink.dllplugin  film_lut_generator.py
Package Files for Analysis/: Effect_AtmosphericFog.fxh  Effect_CRTShader.fxh  Effect_CinematicFX.fxh  Effect_ProceduralLensDirt.fxh  Effect_ProceduralWeatherFX.fxh  MartysMods_Include_Library_Analysis.md  PrePassAddonTechniques.fxh  SB_Bidirectional_Architecture.md  SB_Innovation_Roadmap.md  SilentHorizons_Codebase_Analysis.md  SkyrimBridge.fxh  SkyrimBridge_Complete_Analysis.md  enbUI_CRT.fxh  enbUI_CinematicFX.fxh  enbUI_DepthOfField.fxh  enbUI_Fog.fxh  enbUI_PostPass__4_.fxh  enbadaptation.fx  enbbloom.fx  enbdepthoffield.fx  enbeffect.fx  enbeffectpostpass.fx  enbeffectpostpass__5_.fx  enbeffectprepass.fx  enblens.fx  enblut.fxh  enbsunsprite.fx
RAW/: ARCHITECTURE.md  LICENSE.md  LINEAGE.md  ROADMAP.md
Shaders/: AtmoAerial.hlsl  AtmoMultiScatter.hlsl  AtmoTransmittance.hlsl  Bloom_Composite.hlsl  Bloom_Extract.hlsl  Bloom_Upsample.hlsl  CelestialBodies.hlsl  CloudDetailNoise.hlsl  CloudRaymarch.hlsl  CloudShapeNoise.hlsl  Cluster_Build.hlsl  Cluster_Cull.hlsl  ColorPipeline.hlsl  ContactShadow_Denoise.hlsl  ContactShadow_Main.hlsl  Cubemap_Capture.hlsl  Debug_PS.hlsl  Debug_VS.hlsl  Decal_Main.hlsl  Denoise_Bilateral.hlsl  Denoise_BilateralRGBA.hlsl  Denoise_Temporal.hlsl  DoF_Autofocus.hlsl  DoF_CoCTile.hlsl  DoF_Composite.hlsl  DoF_FarGather.hlsl  DoF_NearGather.hlsl  FrameGen_OpticalFlow.hlsl  FrameGen_Synthesis.hlsl  GTAO_Main.hlsl  GTAO_Spatial.hlsl  GTAO_Temporal.hlsl  Histogram_Main.hlsl  Histogram_Metering.hlsl  Histogram_Reduction.hlsl  Lens_Anamorphic.hlsl  Lens_Composite.hlsl  Lens_Ghost.hlsl  Lens_Starburst.hlsl  Material_Stamp.hlsl  (+21 more)
build_enb/: CMakeCache.txt
config/: FeedbackConfig.ini  WriteBackConfig.ini
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONFIGURATION.md  CREDITS.md  DIAGNOSTICS.md  EXTENDER_COMPAT.md  PARAMETER_REFERENCE.md  PHASE1_ANALYSIS.md  Research_ShaderFramework_HDR_Performance.md  SHADER_INTEGRATION.md  SHARED_MEMORY.md
memory/: shader_technique_catalog.md
native/: CMakeLists.txt
native/app/: main.cpp
native/raw/: accel.hpp  arena.hpp  arena_allocator.hpp  certificate.hpp  composite.hpp  gbuffer.hpp  image.hpp  mat.hpp  primitives.hpp  raster.hpp  ray_ao.hpp  reconcile.hpp  scene.hpp  ssao.hpp  vec.hpp  version.hpp
native/src/: accel.cpp  arena.cpp  arena_witness.cpp  certificate.cpp  certificate_from.cpp  composite.cpp  image.cpp  raster.cpp  raw_native.cpp  ray_ao.cpp  reconcile.cpp  scene.cpp  ssao.cpp
native/tests/: check.hpp  test_accel.cpp  test_accel_arena.cpp  test_arena.cpp  test_arena_allocator.cpp  test_arena_typed.cpp  test_buffer_arena.cpp  test_certificate.cpp  test_certificate_emit.cpp  test_certificate_from.cpp  test_composite.cpp  test_frame_arena.cpp  test_gbuffer_arena.cpp  test_image.cpp  test_mat.cpp  test_primitives.cpp  test_raster.cpp  test_ray_ao.cpp  test_reconcile.cpp  test_render_arena.cpp  test_sanity.cpp  test_scene.cpp  test_scene_arena.cpp  test_ssao.cpp  test_vec.cpp
shader/: Shadertoy_CurlFlowImpressionism.glsl  enbadaptation.fx  enbbloom.fx  enbdepthoffield.fx  enbeffect.fx  enbeffectpostpass.fx  enbeffectprepass.fx  enbglobals.fxh  enblens.fx  enbsunsprite.fx  enbunderwater.fx
src/: ENBInterface_v3.h  ParmLinkCompat.cpp  ParmLinkCompat.h  SB_SharedLayout.h  SharedMemoryBridge.cpp  SharedMemoryBridge.h  Trackers.h  WeatherParameterComputer.cpp  WeatherParameterComputer.h  main_integration.cpp
src/enb_gtav/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ENBExports_API.cpp  ENBExports_SDK.cpp  ENBExports_TwShim.cpp  ENBExports_TwShim.h  ENBHelperBridge.cpp  ENBHelperBridge.h  ENBLog.cpp  ENBLog.h  ENBParamsCompute.cpp  ENBParamsCompute.h  ENBState.cpp  ENBState.h  ENBSwapChain.cpp  ENBSwapChain.h  EffectCompiler.cpp  EffectCompiler.h  FPSLimiter.cpp  FPSLimiter.h  InputManager.cpp  InputManager.h  PluginLoader.cpp  PluginLoader.h  PostProcessPipeline.cpp  PostProcessPipeline.h  ProxyLibrary.cpp  ProxyLibrary.h  RenderTargetPool.cpp  RenderTargetPool.h  ScreenshotCapture.cpp  ScreenshotCapture.h  TimeOfDaySystem.cpp  TimeOfDaySystem.h  WeatherSystem.cpp  WeatherSystem.h  enb_bootstrap.cpp  enb_bootstrap.def  enb_gtav.def  (+5 more)
src/enb_gtav/enbhelper/: enbhelper.cpp  scripthookv_min.h
tools/: deploy.bat  validate_shaders.bat
(+1076 files in other folders)
